Changed colors to improve contrast to solve accessibility scan issues

--- a/src/Bootstrap/less/theme/common-readme.less
+++ b/src/Bootstrap/less/theme/common-readme.less
@@ -88,7 +88,7 @@
       
       .hljs-built_in,
       .hljs-symbol {
-        color: var(--statusWarningForeground1Rest);
+        color: var(--statusWarningForegroundDark);
       }
       
       .hljs-comment,
@@ -101,7 +101,7 @@
       .hljs-quote,
       .hljs-selector-tag,
       .hljs-selector-pseudo {
-        color: var(--statusSuccessForeground1Rest);
+        color: var(--statusGenericDarkGreenStrokeActiveRest);
       }
       
       .hljs-subst {
